--- a/src/package.xml
+++ b/src/package.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>CustomerPurchaseOrder</members>
-        <members>EmployeePurchaseOrder</members>
-        <members>ExampleController</members>
-        <members>Keywords</members>
-        <members>ProcessPurchaseOrder</members>
-        <members>PurchaseOrder</members>
-        <members>SubClass</members>
-        <members>SuperClass</members>
+        <members>ConvertToCLA</members>
+        <members>Country</members>
         <name>ApexClass</name>
     </types>
     <version>53.0</version>
