--- a/src/package.xml
+++ b/src/package.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountTriggerHandler</members>
+        <members>NewOpportunityTriggerHandler</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>Trigger_Operations</members>
+        <members>Trigger_Opportunity</members>
         <name>ApexTrigger</name>
     </types>
     <types>
-        <members>Account.Email__c</members>
-        <members>Account.Type</members>
+        <members>Opportunity.Automobile_Tag_Details_1__c</members>
+        <members>Opportunity.Automobile_Tag_Details_2__c</members>
+        <members>Opportunity.Automobile_Tag_Details_3__c</members>
+        <members>Opportunity.Email__c</members>
+        <members>Opportunity.Return_To_HQ__c</members>
+        <members>Opportunity.Shipment_Account__c</members>
         <name>CustomField</name>
     </types>
     <types>
-        <members>Account.Axis_Bank</members>
-        <name>RecordType</name>
+        <members>Automobile_Presence_Sensor__c</members>
+        <members>Automobile_Sensor__c</members>
+        <members>Automobile_TDU__c</members>
+        <members>Automobile_Tag__c</members>
+        <name>CustomObject</name>
     </types>
     <types>
-        <members>AccountType</members>
+        <members>Automobile_Presence_Sensor__c</members>
+        <members>Automobile_Sensor__c</members>
+        <members>Automobile_TDU__c</members>
+        <members>Automobile_Tag__c</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>OpportunityStage</members>
         <name>StandardValueSet</name>
     </types>
     <version>53.0</version>
