--- a/src/package.xml
+++ b/src/package.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountTriggerHandler</members>
+        <members>AdvanceCountryStateDistrictHandler</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>Trigger_Operations</members>
+        <members>DistrictTrigger</members>
+        <members>StateTrigger</members>
         <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>Account.Email__c</members>
-        <members>Account.Type</members>
-        <name>CustomField</name>
-    </types>
-    <types>
-        <members>Account.Axis_Bank</members>
-        <name>RecordType</name>
-    </types>
-    <types>
-        <members>AccountType</members>
-        <name>StandardValueSet</name>
     </types>
     <version>53.0</version>
 </Package>
